# karl-fashion-feed

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README_PROJECT.md  TODO.md  components.json  docker-compose.app.yml  ideas.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml  todo.md  tsconfig.json  vite.config.ts
backend/: AGENTS.md  README.md  __init__.py  main.py  product.md  pyproject.toml  runtime_error_review_2026-03-29.md  schema.md
backend/app/: __init__.py  app_main.py  config.py  main.py  sources.yaml  test_emb.py
backend/app/config/: __init__.py  auth_config.py  celery_config.py  database.py  embedding.py  embedding_config.py  env.py  llm_config.py  milvus.py  search_config.py  source_config.py  storage.py  storage_config.py
backend/app/core/: auth_dependencies.py  database.py  redis_client.py  security.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/models/: README.md  __init__.py  article.py  bootstrap.py  chat.py  common.py  digest.py  document.py  event_frame.py  image.py  retrieval.py  runtime.py  story.py  strict_story.py  user.py
backend/app/prompts/: __init__.py  article_enrichment_prompt.py  article_normalization_prompt.py  article_parse_prompt.py  digest_generation_prompt.py  digest_packaging_prompt.py  digest_report_writing_prompt.py  event_frame_extraction_prompt.py  facet_assignment_prompt.py  image_analysis_prompt.py  rag_answer_synthesis_prompt.py  rag_tool_loop_prompt.py  story_cluster_judgment_prompt.py  story_cluster_review_prompt.py  story_generation_prompt.py  strict_story_tiebreak_prompt.py
backend/app/repository/: __init__.py  document_repository.py
backend/app/router/: AGENTS.md  __init__.py  auth_router.py  chat_router.py  deep_research_router.py  digest_router.py  memory_router.py  rag_router.py  story_router.py
backend/app/schema/: __init__.py  retrieval.py
backend/docs/: rag-collection-design.md
backend/scripts/: README.md  __init__.py  feed-state.json  fetch_feeds.py  requirements.txt  rss-snapshot.json  sources.yaml
backend/seeds/: init_seed_2026-04-13.dump  init_seed_2026-04-13.dump.sha256
backend/server/: index.ts
backend/tests/: test_article_chunk_service.py  test_article_cluster_service.py  test_article_collection_service.py  test_article_enrichment_service.py  test_article_ingestion_service.py  test_article_markdown_service.py  test_article_rag_service.py  test_auth_bootstrap_schema.py  test_auth_config.py  test_auth_router.py  test_backfill_article_storage.py  test_celery_config.py  test_chat_router_interrupt.py  test_chat_worker_service.py  test_daily_pipeline_service.py  test_daily_run_coordinator_service.py  test_deep_research_graph_service.py  test_deep_research_router.py  test_dev_ingest_story_rag_today.py  test_dev_run_today_digest_pipeline.py  test_dev_run_today_full_pipeline.py  test_digest_generation_service.py  test_digest_packaging_service.py  test_digest_report_writing_prompt.py  test_digest_report_writing_service.py  test_digest_router.py  test_embedding_service.py  test_event_frame_extraction_service.py  test_image_analysis_service.py  test_init_root_user.py  test_llm_client_service.py  test_llm_contracts.py  test_llm_debug_artifact_service.py  test_milvus_service.py  test_news_collection_service.py  test_prompt_schema_contracts.py  test_qdrant_service.py  test_query_service.py  test_rag_answer_service.py  test_rag_prompts.py  (+13 more)
(+601 files in other folders)
