[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "async>=0.6.2",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "dashscope>=1.25.13",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.1",
    "feedparser>=6.0.12",
    "imagehash>=4.3.2",
    "langchain>=1.2.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.2",
    "llama-index>=0.14.16",
    "openai>=2.26.0",
    "pathlib>=1.0.1",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "psycopg[binary]>=3.3.3",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.17.1",
    "readability-lxml>=0.8.4.1",
    "redis>=7.3.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.48",
    "trafilatura>=2.0.0",
]
