[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-fashion-daily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.3",
    "langgraph-cli[inmem]>=0.4.19",
    "langsmith>=0.7.22",
    "mcp>=1.26.0",
    "openai>=2.30.0",
    "pydantic>=2.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "tavily-python>=0.5.0",
    "langchain-mcp-adapters>=0.1.0",
    "aiohttp>=3.9.0",
    "langgraph-api>=0.7.94",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
